@@ -1,7 +1,9 @@
 package net.thevpc.nuts.runtime.standalone.workspace.cmd.recom;
 
 import net.thevpc.nuts.*;
+import net.thevpc.nuts.io.NPath;
 import net.thevpc.nuts.runtime.standalone.workspace.cmd.settings.clinfo.NCliInfo;
+import net.thevpc.nuts.util.NStringUtils;
 
 import java.util.Locale;
 import java.util.Map;
@@ -27,10 +29,7 @@ public abstract class AbstractRecommendationConnector implements RecommendationC
         validateRequest(ri, session);
         NId id = NId.of(ri.q.getId()).ifBlankEmpty().get(session);
         String name = phase.name().toLowerCase() + (failure ? "-failure" : "") + "-recommendations.json";
-        String url = "/repo/" + id.getGroupId().replace('.', '/')
-                + '/' + id.getArtifactId()
-                + '/' + id.getVersion()
-                + '/' + name;
+        String url = "/repo/" + id.getGroupId().replace('.', '/') + '/' + id.getArtifactId() + '/' + id.getVersion() + '/' + name;
         return post(url, ri, Map.class, session);
     }
 
@@ -38,8 +37,17 @@ public abstract class AbstractRecommendationConnector implements RecommendationC
     public abstract <T> T post(String url, RequestQueryInfo ri, Class<T> resultType, NSession session);
 
     public void validateRequest(RequestQueryInfo ri, NSession session) {
-        ri.server = (ri.server == null || ri.server.trim().isEmpty()) ? "https://thevpc.net/nuts" : ri.server;
-        NEnvs env = NEnvs.of(session);
+        NEnvs envs = NEnvs.of(session);
+        NLiteral endPointURL = envs.getProperty("nuts-endpoint-url").orNull();
+        if (NBlankable.isBlank(ri.server)) {
+            if (endPointURL == null || endPointURL.isBlank()) {
+                String defaultURL = resolveDefaultEndpointURL(session);
+                envs.setProperty("nuts-endpoint-url", defaultURL);
+            } else {
+                ri.server = endPointURL.asString().get();
+            }
+        }
+        NEnvs env = envs;
         RequestAgent agent = ri.q.getAgent();
         NWorkspace ws = session.getWorkspace();
         if (agent.getApiVersion() == null) {
@@ -79,6 +87,34 @@ public abstract class AbstractRecommendationConnector implements RecommendationC
         if (agent.getUserTimeZone() == null) {
             agent.setUserTimeZone(TimeZone.getDefault().getDisplayName());
         }
+    }
+
+    private String resolveDefaultEndpointURL(NSession session) {
+        String p = NStringUtils.trim(System.getProperty("nuts-endpoint-url"));
+        if (!p.isEmpty()) {
+            if (p.equals("dev") || p.equals("debug")) {
+                p = "http://127.0.0.1:8080/public/nuts";
+            }else if (p.matches("localhost") || p.matches("127[.]0[.]0[.][0-9]+")) {
+                p = "http://" + p + ":8080/public/nuts";
+            } else if (p.matches("localhost(:[0-9]+)?") || p.matches("127[.]0[.]0[.][0-9]+(:[0-9]+)?")) {
+                p = "http://" + p + "/public/nuts";
+            } else if (p.matches("[a-zAzZ]+(:[0-9]+)?") || p.matches("[0-9]+[.][0-9]+[.][0-9]+[.][0-9]+(:[0-9]+)?")) {
+                p = "https://" + p + "/public/nuts";
+            } else {
+                //
+            }
+        } else {
+            try {
+                String s = NStringUtils.trimToNull(NPath.of("https://raw.githubusercontent.com/thevpc/nuts/master/.endpoint", session).readString());
+                if (s != null && s.startsWith("https://")) {
+                    return s;
+                }
+            } catch (Exception ex) {
+                //error;
+            }
+            return "https://nuts-pm.net/public/nuts";
+        }
+        return p;
     }
 
 }
